Refactor CSS for responsive design and layout

--- a/function.css
+++ b/function.css
@@ -3,7 +3,11 @@
     body{
         display: flex;
     }
-    
+.post{
+        max-width: 100%;
+        height: auto;
+        aspect-ratio: 9 / 16;
+    }
     
 }
 .div-1{
@@ -160,4 +164,5 @@ overflow-y: scroll;
     height: 800px;
     
         
+
 }
